k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technova-backend
  namespace: technova
spec:
  replicas: 2
  selector:
    matchLabels:
      app: technova
  template:
    metadata:
      labels:
        app: technova
    spec:
      containers:
      - name: backend
        image: bittush8789/llmops-chatbot:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 20
