k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technova-service
  namespace: technova
spec:
  selector:
    app: technova
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
